--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -6,6 +6,8 @@
 }
 
 .box {
+  display: flex;
+  justify-content: center;
   background: palevioletred;
   font-weight: bold;
   text-align: center;
