--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,9 +1,16 @@
 .header  {
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between;
   font-family: monospace;
   background: papayawhip;
 }
 
 .logo {
+  display: flex;
+  justify-content: center;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -12,8 +19,12 @@
 }
 
 ul {
+  gap: 10px;
   /* this removes the dots on the list items*/
+  display: flex;
   list-style-type: none;
+  margin: 0px;
+  padding: 0px;
 }
 
 a {
